force-app/src/objects/c2g__CommunitySettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Allows you to enable or disable email notifications for Community users, use custom field sets to determine the fields included on a printed document and specify a custom page to be used for printing billing documents.</description>
    <fields>
        <fullName>c2g__CommPrintBillingDocFieldSet__c</fullName>
        <defaultValue>&quot;CommunityPrintedDocumentFields&quot;</defaultValue>
        <description>Name of the billing document field set that determines which billing document fields are to be included on a printed billing document for community users. When blank, the default field set &quot;CommunityPrintedDocumentFields&quot; is used.</description>
        <inlineHelpText>Name of the billing document field set that determines which billing document fields are to be included on a printed billing document for community users. When blank, the default field set &quot;CommunityPrintedDocumentFields&quot; is used.</inlineHelpText>
        <label>Community Print Billing Doc Field Set</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CommPrintBillingDocLineFieldSet__c</fullName>
        <defaultValue>&quot;CommunityPrintedDocumentFields&quot;</defaultValue>
        <description>Name of the billing document field set that determines which billing document line item fields are to be included on a printed billing document for community users. When blank, the default field set &quot;CommunityPrintedDocumentFields&quot; is used.</description>
        <inlineHelpText>Name of the billing document field set that determines which billing document line item fields are to be included on a printed billing document for community users. When blank, the default field set &quot;CommunityPrintedDocumentFields&quot; is used.</inlineHelpText>
        <label>Community Print Bill Doc Line Field Set</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CustomPrintTemplate__c</fullName>
        <description>The print template used to print a billing document via FM Communities.</description>
        <label>Custom Billing Document Print Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__NotifyCommunityUsersBillingDocument__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, Community members will be sent an email message each time a Billing Document is posted.</description>
        <label>Notify Contacts - Billing Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__NotifyCommunityUsersCreditNote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, Community members will be sent an email message each time a Sales Credit Note is posted.</description>
        <label>Notify Contacts - Sales Credit Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__NotifyCommunityUsersInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, Community members will be sent an email message each time a Sales Invoice is posted.</description>
        <label>Notify Contacts - Sales Invoice</label>
        <type>Checkbox</type>
    </fields>
    <label>Community Settings</label>
</CustomObject>